--- a/scss/main.scss
+++ b/scss/main.scss
@@ -90,7 +90,17 @@ $main-color: #FFFFD2;
       border-radius: 50%;
       float: left;
     }
+    div[data-pattern] {
+      width: 15px;
+      height: 15px;
+      margin: 5px;
+      border-radius: 50%;
+      float: left;
+    }
     div[data-color].current {
+      box-shadow: 0px 0px 7px 0px rgba(255,255,210,1);
+    }
+    div[data-pattern].current {
       box-shadow: 0px 0px 7px 0px rgba(255,255,210,1);
     }
   }
