--- a/scss/main.scss
+++ b/scss/main.scss
@@ -38,16 +38,26 @@ $main-color: #FFFFD2;
   display: flex;
   background-image: url("../images/pexels-photo-351961.jpeg");
   background-position: center bottom -150px;
+  background-repeat: no-repeat;
   background-size: 170%;
   height: 100vh;
   width: 90%;
   align-items: center;
   flex-direction: column;
-  #canvas {
+  #canvases {
     margin-right: 20px;
     margin-left: 100px;
     width: 55%;
     height: 97vh;
+    #canvas1 {
+      z-index: 0
+    }
+    #canvas2 {
+      z-index: 0;
+    }
+  }
+  canvas {
+    position: absolute;
   }
 }
 
