--- a/scss/main.scss
+++ b/scss/main.scss
@@ -49,12 +49,6 @@ $main-color: #FFFFD2;
     margin-left: 100px;
     width: 55%;
     height: 97vh;
-    #canvas1 {
-      z-index: 0
-    }
-    #canvas2 {
-      z-index: 0;
-    }
   }
   canvas {
     position: absolute;
@@ -130,7 +124,7 @@ $main-color: #FFFFD2;
       border: none;
       font-family: "Roboto", Sans-serif;
       padding: 1rem;
-      width: 90%;
+      width: 95%;
       height: 4rem;
       cursor: pointer;
       color: $main-color;
@@ -139,8 +133,12 @@ $main-color: #FFFFD2;
       outline: 0;
       text-transform: uppercase;
     }
+    .randomMandala {
+      width: 100%;
+    }
     input[type='range'] {
       margin-right: 0.5rem;
+      margin-bottom: 1rem;
     }
     select {
       border-radius: 0;
