Resized background image

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -43,7 +43,7 @@ $main-color: #FFFFD2;
 
 #container {
   display: flex;
-  background-image: url("../images/pexels-photo-351961.jpeg");
+  background-image: url("../images/background.jpg");
   background-position: center bottom -150px;
   background-repeat: no-repeat;
   background-size: 170%;
